Another fix for pre tags that break the layout

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -231,7 +231,6 @@ a.media {
   @extend .content;
   @extend .content--wide;
   display: flex;
-  max-width: $page-width;
 }
 
 .l-aside {
