--- a/_scss/_media-queries.scss
+++ b/_scss/_media-queries.scss
@@ -170,7 +170,7 @@
 
   //* Stack main and aside */
   .l-wrap-inner {
-    flex-direction: column;
+    display: block;
     padding: 0;
   }
 
