--- a/_scss/components/_text_blocks.scss
+++ b/_scss/components/_text_blocks.scss
@@ -158,7 +158,7 @@
     background: rgba(255,255,255,0.8);
     box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
     color: $color-highlight;
-    max-width: 45em;
+    max-width: 40em;
     overflow: auto;
     padding: 20px;
 
@@ -173,7 +173,7 @@
     }
 
     @media (max-width: $bp-med-large-2) and (min-width: $bp-med) {
-      max-width: 33em;
+      max-width: 30em;
     }
   }
 
