--- a/_scss/pages/_blog.scss
+++ b/_scss/pages/_blog.scss
@@ -82,5 +82,5 @@
 .disqus {
   margin-left: auto;
   margin-right: auto;
-//  max-width: 640px;
+  max-width: 640px;
 }
